# PokerGame_CMake

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml  main.yml
include/: Card.h  Enums.h  Game.h  Player.h  Utilities.h
src/: Card.cpp  Game.cpp  Player.cpp  Utilities.cpp
